--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -167,7 +167,7 @@
 						});
 						$("#loader").show();
 						setTimeout(function () {
-						   document.getElementById('url').innerHTML += ('<br>http://13.15.117.191:8081/'+phone+".pdf");
+						   document.getElementById('url').innerHTML += ('<br>http://13.15.117.191:8081/certification/'+phone+".pdf");
 					    }, 2000);
 						$("#loader").hide();
 						
