--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,28 +30,7 @@
 
 <!-- Custom styles for this template -->
 <link href="css/agency.min.css" rel="stylesheet">
-<style>
-.loader {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite; /* Safari */
-  animation: spin 2s linear infinite;
-}
 
-/* Safari */
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-</style>
 </head>
 
 <body id="page-top">
@@ -138,13 +117,16 @@
 				</div>
 			</form>
 			<div class="row">
-				<div class="col-lg-12 text-center">
-					<a class="btn btn-primary btn-xl" onclick="new_contractor()">生成证书</a>
+				<div class="col-md-2 text-center"></div>
+				<div class="col-md-8 input-group">
+					<input type="text" id="pdfDownloadUrl" class="form-control" placeholder="下载链接">
+					<span class="input-group-btn"> 
+						<a class="btn btn-primary btn-xl" onclick="new_contractor()">生成证书</a>
+						<a class="btn btn-primary btn-xl" onclick="downloadPdf()">点击下载</a>
+					</span>
 				</div>
-				<div id="loader" class="loader" style="display:none"></div>
-				<div id="url"></div>
+				<div class="col-md-2 text-center"></div>
 				<script type="text/javascript">
-
 					var phone = "1234567";
 					function new_contractor() {
 
@@ -165,12 +147,17 @@
 							dataType : "json",
 							contentType : "application/json"
 						});
-						$("#loader").show();
-						setTimeout(function () {
-						   document.getElementById('url').innerHTML += ('<br>http://13.15.117.191:8081/certification/'+phone+".pdf");
-					    }, 2000);
-						$("#loader").hide();
-						
+
+						document.getElementById('pdfDownloadUrl').value = ('http://13.15.117.191:8081/certification/'
+								+ phone + ".pdf");
+
+					}
+					function downloadPdf(){
+						if(phone === "1234567"){
+							new_contractor();
+							window.open('http://13.15.117.191:8081/certification/'
+								+ phone + ".pdf");	
+						}
 					}
 					function objectifyForm(formArray) {//serialize data function
 
