--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -187,7 +187,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div hidden class="col-md-4 col-sm-6 portfolio-item">
+				<div  class="col-md-4 col-sm-6 portfolio-item">
 					<a class="portfolio-link" data-toggle="modal"
 						href="#portfolioModal1">
 						<div class="portfolio-hover">
@@ -202,7 +202,7 @@
 						<p class="text-muted">开放在线申请</p>
 					</div>
 				</div>
-				<div hidden class="col-md-4 col-sm-6 portfolio-item">
+				<div  class="col-md-4 col-sm-6 portfolio-item">
 					<a class="portfolio-link" data-toggle="modal"
 						href="#portfolioModal2">
 						<div class="portfolio-hover">
@@ -232,7 +232,7 @@
 						<p class="text-muted">一键生成证书到手机</p>
 					</div>
 				</div>
-				<div hidden class="col-md-4 col-sm-6 portfolio-item">
+				<div  class="col-md-4 col-sm-6 portfolio-item">
 					<a class="portfolio-link" data-toggle="modal"
 						href="#portfolioModal4">
 						<div class="portfolio-hover">
@@ -247,7 +247,7 @@
 						<p class="text-muted">证书在线分发</p>
 					</div>
 				</div>
-				<div hidden class="col-md-4 col-sm-6 portfolio-item">
+				<div  class="col-md-4 col-sm-6 portfolio-item">
 					<a class="portfolio-link" data-toggle="modal"
 						href="#portfolioModal5">
 						<div class="portfolio-hover">
@@ -262,7 +262,7 @@
 						<p class="text-muted">证书永久保存</p>
 					</div>
 				</div>
-				<div hidden class="col-md-4 col-sm-6 portfolio-item">
+				<div  class="col-md-4 col-sm-6 portfolio-item">
 					<a class="portfolio-link" data-toggle="modal"
 						href="#portfolioModal6">
 						<div class="portfolio-hover">
